{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 812,
  "lineage": "ca563eda-8a71-f5df-13b1-860541e8e0a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa2c956df5c0b087",
            "arn": "arn:aws:ec2:eu-west-1:533267431876:elastic-ip/eipalloc-0fa2c956df5c0b087",
            "domain": "vpc",
            "id": "eipalloc-0fa2c956df5c0b087",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-155-27-204.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.27.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-nat-eip"
            },
            "tags_all": {
              "Name": "app-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:internet-gateway/igw-0fcb645bd5b0f5401",
            "id": "igw-0fcb645bd5b0f5401",
            "owner_id": "533267431876",
            "tags": {
              "Name": "app-igw"
            },
            "tags_all": {
              "Name": "app-igw"
            },
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:loadbalancer/app/app-lb/c095672f96b98fda",
            "arn_suffix": "app/app-lb/c095672f96b98fda",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1893359632.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:loadbalancer/app/app-lb/c095672f96b98fda",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05a7375fa3313b0ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05667651d53e55b51"
              },
              {
                "subnet_id": "subnet-0fa9e850aba2d07d5"
              }
            ],
            "subnets": [
              "subnet-05667651d53e55b51",
              "subnet-0fa9e850aba2d07d5"
            ],
            "tags": {
              "Name": "app-lb"
            },
            "tags_all": {
              "Name": "app-lb"
            },
            "vpc_id": "vpc-0f1fa7a3985af4906",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.app_lb_sg",
            "aws_subnet.app_subnet_1",
            "aws_subnet.app_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:listener/app/app-lb/c095672f96b98fda/a32b2668364822b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:targetgroup/app-tg/1caf10eeceb2c3c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:listener/app/app-lb/c095672f96b98fda/a32b2668364822b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:loadbalancer/app/app-lb/c095672f96b98fda",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_target_group",
            "aws_security_group.app_lb_sg",
            "aws_subnet.app_subnet_1",
            "aws_subnet.app_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:targetgroup/app-tg/1caf10eeceb2c3c5",
            "arn_suffix": "targetgroup/app-tg/1caf10eeceb2c3c5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267431876:targetgroup/app-tg/1caf10eeceb2c3c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa2c956df5c0b087",
            "association_id": "eipassoc-0fc6015766d94a605",
            "connectivity_type": "public",
            "id": "nat-049518fe39f734f77",
            "network_interface_id": "eni-02a2384ea4ec682bd",
            "private_ip": "10.0.1.70",
            "public_ip": "54.155.27.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa9e850aba2d07d5",
            "tags": {
              "Name": "app-nat-gateway"
            },
            "tags_all": {
              "Name": "app-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.app_nat_eip",
            "aws_subnet.app_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:route-table/rtb-0ff3e09ae8ee6dd4d",
            "id": "rtb-0ff3e09ae8ee6dd4d",
            "owner_id": "533267431876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049518fe39f734f77",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.app_nat_eip",
            "aws_nat_gateway.app_nat_gateway",
            "aws_subnet.app_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:route-table/rtb-06d6ec271d142209f",
            "id": "rtb-06d6ec271d142209f",
            "owner_id": "533267431876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcb645bd5b0f5401",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d547028e2674aee6",
            "route_table_id": "rtb-0ff3e09ae8ee6dd4d",
            "subnet_id": "subnet-0c66021db719833c4"
          },
          "dependencies": [
            "aws_eip.app_nat_eip",
            "aws_nat_gateway.app_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.app_private_subnet_1",
            "aws_subnet.app_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075d0c0f14b0b23df",
            "route_table_id": "rtb-0ff3e09ae8ee6dd4d",
            "subnet_id": "subnet-0a8aba1e5bcf91d1d"
          },
          "dependencies": [
            "aws_eip.app_nat_eip",
            "aws_nat_gateway.app_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.app_private_subnet_2",
            "aws_subnet.app_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b43b88c4acefe0e",
            "route_table_id": "rtb-06d6ec271d142209f",
            "subnet_id": "subnet-0fa9e850aba2d07d5"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.app_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7e1c79111b655f3",
            "route_table_id": "rtb-06d6ec271d142209f",
            "subnet_id": "subnet-05667651d53e55b51"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.app_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:security-group/sg-05a7375fa3313b0ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a7375fa3313b0ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-lb-sg-20241219082845796700000002",
            "name_prefix": "app-lb-sg-",
            "owner_id": "533267431876",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:security-group/sg-04c7525db17ff5d88",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c7525db17ff5d88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a7375fa3313b0ef"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-sg-20241219082848451600000004",
            "name_prefix": "ecs-sg-",
            "owner_id": "533267431876",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_lb_sg",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:subnet/subnet-0c66021db719833c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c66021db719833c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267431876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet-1"
            },
            "tags_all": {
              "Name": "app-private-subnet-1"
            },
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:subnet/subnet-0a8aba1e5bcf91d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8aba1e5bcf91d1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267431876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet-2"
            },
            "tags_all": {
              "Name": "app-private-subnet-2"
            },
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:subnet/subnet-0fa9e850aba2d07d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa9e850aba2d07d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267431876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-public-subnet-1"
            },
            "tags_all": {
              "Name": "app-public-subnet-1"
            },
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:subnet/subnet-05667651d53e55b51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05667651d53e55b51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267431876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-public-subnet-2"
            },
            "tags_all": {
              "Name": "app-public-subnet-2"
            },
            "vpc_id": "vpc-0f1fa7a3985af4906"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267431876:vpc/vpc-0f1fa7a3985af4906",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034f0dba1f80475b2",
            "default_route_table_id": "rtb-0a501c6356fc7a951",
            "default_security_group_id": "sg-0670f6b30113ccc8a",
            "dhcp_options_id": "dopt-0207a629ee3b50556",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1fa7a3985af4906",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a501c6356fc7a951",
            "owner_id": "533267431876",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          }
        }
      ]
    }
  ]
}